@@ -1,8 +1,12 @@
-Fri Jul 25 15:05:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Jul 25 16:21:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/io.h (ruby_absolute_path_p): published.
 
 	* io.c (rb_sysopen_prepare): fix for non-openat platforms.
+
+	* thread.c (ruby_thread_getcwd): fix for non-openat platforms.
+
+	* util.c (ruby_sys_getcwd): renamed and reverted.
 
 Tue Jul 22 21:07:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
